<resources>
    <string name="app_name">PumApplin</string>
    <string name="mapa">Mapa</string>
    <string name="info_parque">Info Parque</string>
    <string name="pumal_n_significa_lugar_de_agua_proveniente_del_huilliche">Pumalín significa “lugar de agua”, proveniente del huilliche (Pu:lugar / malín: mallín, zona inundada). El ecosistema único que alberga este parque se conforma de bosques templados lluviosos- también llamado localmente selva valdiviana- en una geografía interrumpida por fiordos y volcanes, que se mantuvo aislada por el hielo durante los miles de años que duró la última glaciación, generando altos niveles de endemismos en la zona (especies que se encuentran únicamente en este lugar).\n\nLos bosques del parque contemplan el 25% de los alerces milenarios que aun sobreviven en Chile y es hábitat de múltiples especies en categorías de conservación.\n</string>
    <string name="historia_del_parque_pumal_n_ndouglas_tompkins_camin_en_el_a_o_1989">Historia del Parque Pumalín\nDouglas Tompkins caminó, en el año 1989, bajo los alerces milenarios que alberga el actual Parque Nacional Pumalín. En ese entonces, estas tierras patagónicas pertenecían a diversos estancieros que habían adquirido el territorio en los años 20’ y lo tenían abandonado o lo utilizaban para la ganadería y cosecha maderera.\n\nDouglas, junto a su pareja Kristine Tompkins, comprendieron la importancia de la biodiversidad local y desde el año 1991 comenzaron a adquirir miles de hectáreas con el fin de conservarlas y protegerlas, transformando el territorio en un Santuario de la Naturaleza en el año 2005.\n\nDurante muchos años, la Fundación Tompkins Conservation- hoy Rewilding Chile– trabajó para la adquisición de territorios en la Patagonia con el sueño de donarlos al Sistema de Parques Nacionales de Chile.\n\nA pesar de las enormes controversias y suspicacias generadas por este proyecto, en el año 2018, se realizó la donación mas grande de tierras de un privado a un Estado en la historia de la humanidad, entregando 403 mil hectáreas en diversas áreas de la Patagonia. Nace así el Parque Nacional Pumalín Douglas Tompkins.\n</string>
    <string name="c_mo_llegar_al_parque_nacional_pumal_n_douglas_tompkins_nsi_vas_a_llegar_en_veh_culo_desde_puerto_montt">Cómo llegar al Parque Nacional Pumalín Douglas Tompinks\nSi vas a llegar en vehículo desde Puerto Montt, debes viajar 49 km por la Ruta 7 hacia el sur hasta llegar a Caleta La Arena, donde un ferry te permitirá cruzar hacia Caleta Puelche.\n\nRecorre otros 60 km hacia el sur para llegar a Hornopirén. Desde allí, deberás tomar una barcaza de las empresas Transportes Austral o Somarco para cruzar hacia Leptetu,  en un viaje que tarda cerca de 3 horas y media y que se debe coordinar previamente.\n\nAhora deberás viajar 10 km para tomar una segunda barcaza en el sector de Fiordo Largo. En 40 minutos llegarás  a Caleta Gonzalo, lugar donde reinicia la Carretera Austral y donde se encuentra la mayor parte de la infraestructura turística del Parque Nacional Pumalín Douglas Tompinks.\n\nTen en cuenta que hay buses que salen desde Puerto Montt con destino hacia el parque.  Si estás haciendo el viaje desde el sur, debes llegar por la Ruta 7 hasta el sector de El Amarillo.\n</string>
    <string name="horario_de_atenci_n_nel_horario_de_atenci_n_del_parque_es_de_lunes_a_domingo">- El horario de atención del Parque es de lunes a domingo de 08:30 a 17:30 hrs.\n- El ingreso al Parque y sus senderos es gratuito, se cancela solo uso de áreas de campings según la tarifa de cada temporada. Conaf administra los campings Cascada Escondida, Lago Negro, Lago Blanco, el Volcán, Grande y Ventisquero y funcionan por orden de llegada sin reserva.\n</string>
    <string name="flora_nlos_bosques_del_parque_nacional_pumal_n">Flora\nLos bosques del Parque Nacional Pumalín Douglas Tompkins, presentan un alto nivel de endemismo y subespecies únicas entre las que destacan el Alerce, Luma, Tepa, Canelo, Tineo, Tiaca, Coigues, Ulmo, Olivo, Mañío, Notro, entre otros.\n</string>
    <string name="fauna_nno_es_inusual_avistar_en_los_fiordos">Fauna\nNo es inusual avistar en los fiordos Toninas, Cormoranes, Pingüinos, Garzas, Martín Pescador, mientras que los bosques son el reino de aves como Chucao, Hued- Hued y Rayadito, y hábitat de mamíferos más difíciles de ver como El Pudú, Zorro, Gato Colocolo, Puma y el marsupial chileno: el monito del monte.\n</string>
    <string name="cultura_nterritorio_ancestral_de_los_chonos"><![CDATA[Cultura\nTerritorio ancestral de los Chonos, pueblo canoero & nómade que recorría las islas y canales entre el sur de Chiloé y la península de Taitao, cazando lobos marinos, pescando y recolectando mariscos y algas en sus costas.\n]]></string>
    <string name="dentro_del_parque_encuentra_n_ba_os_n_senderos_n_alojamiento">Dentro del Parque Encuentra:\n-Baños\n-Senderos\n-Alojamiento\n-Camping\n-Restaurante\n-Centro de Información\n-Circuitos\n-Zona de Picnic\n-Miradores</string>
</resources>