<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paisaje2"

    tools:context=".navBottom.InfoParqueFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/informacion"
            android:layout_width="wrap_content"
            android:layout_height="337dp"
            android:layout_margin="25dp"
            android:background="#FFFFFF"
            android:backgroundTint="#4C000000"
            android:backgroundTintMode="multiply"
            android:paddingBottom="16dp"
            android:text="@string/pumal_n_significa_lugar_de_agua_proveniente_del_huilliche"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/historia"
            android:layout_width="331dp"
            android:layout_height="622dp"
            android:layout_margin="25dp"
            android:paddingBottom="16dp"
            android:text="@string/historia_del_parque_pumal_n_ndouglas_tompkins_camin_en_el_a_o_1989"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/como_llegar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_mo_llegar_al_parque_nacional_pumal_n_douglas_tompkins_nsi_vas_a_llegar_en_veh_culo_desde_puerto_montt"
            android:textColor="@color/white"
            android:layout_margin="25dp"
            android:textSize="16sp"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/horario_atencion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horario_de_atenci_n_nel_horario_de_atenci_n_del_parque_es_de_lunes_a_domingo"
            android:textColor="@color/white"
            android:layout_margin="25dp"
            android:textSize="16sp"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/flora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flora_nlos_bosques_del_parque_nacional_pumal_n"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_margin="25dp"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/fauna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fauna_nno_es_inusual_avistar_en_los_fiordos"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_margin="25dp"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/cultura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cultura_nterritorio_ancestral_de_los_chonos"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_margin="25dp"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/servicios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dentro_del_parque_encuentra_n_ba_os_n_senderos_n_alojamiento"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_margin="25dp"
            android:paddingBottom="16dp"/>

    </LinearLayout>
</ScrollView>